fix wrapping

--- a/src/app/explorer/file/file.component.scss
+++ b/src/app/explorer/file/file.component.scss
@@ -17,6 +17,7 @@ app-context-menu {
     border-radius: 0;
     border-width: 1px 0 0 0;
     padding: 0.2rem 3.0rem;
+    white-space: nowrap;
 
     .bi {
       margin-right: 5px;
